# studyvault_services

./: .gitignore  Cargo.toml  build_services.sh  docker-compose.yml
.cargo/: config.toml.example
auth/: Cargo.toml  Dockerfile
auth/src/: auth.rs  controller.rs  lib.rs  main.rs  sql_operations.rs
channels/: Cargo.toml  Dockerfile
channels/src/: channel.rs  controller.rs  main.rs  sql_operations.rs
comments/: Cargo.toml  Dockerfile
comments/src/: comment.rs  controller.rs  main.rs  sql_operations.rs
data_access/: Cargo.toml
data_access/src/: lib.rs
database/: Dockerfile  db_script.sql
posts/: Cargo.toml  Dockerfile  build.rs
posts/proto/: studyvault.proto
posts/src/: controller.rs  grpc_controller.rs  main.rs  post.rs  server.rs  sql_operations.rs
subscriptions/: Cargo.toml  Dockerfile
subscriptions/src/: controller.rs  main.rs  model.rs  repository.rs  routes.rs  sql_operations.rs  sql_repo.rs  subscription.rs
users/: Cargo.toml  Dockerfile
users/src/: controller.rs  email_operations.rs  main.rs  sql_operations.rs  user.rs
