[workspace]
resolver = "2"

members = [
    "data_access",
    "channels",
    "comments",
    "posts",
    "subscriptions",
    "users",
    "auth",
]

[workspace.dependencies]
actix-web = "4.0"
actix-cors = "0.7.0"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = "*"
tokio = { version = "1", features = ["full"] }
chrono = "*"
dotenvy = "*"
rand = "*"
lazy_static = "*"
reqwest = { version = "0.11", features = ["json"] }
log = "*"
env_logger = "*"
utoipa = { version = "4.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
