[package]
name = "posts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "studyvault-server"
path = "src/server.rs"

[dependencies]
data_access = { path = "../data_access" }
actix-web = { workspace = true }
actix-cors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mysql = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.4", features = ["v4"] }
async-stream = "0.3"
tonic = "0.10"
prost = "0.12"

[build-dependencies]
tonic-build = "0.10"
