[package]
name = "posts"
version = "0.1.0"
edition = "2021"

[dependencies]
data_access = { path = "../data_access" }
actix-web = { workspace = true }
serde = { workspace = true }
mysql = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.4", features = ["v4"] }
async-stream = "0.3"
tonic = "0.10"
prost = "0.12"
futures-util = "0.3"
log = { workspace = true }
env_logger = { workspace = true }

[build-dependencies]
tonic-build = "0.10"
